--- a/Copy_of_conditional_statements.ipynb
+++ b/Copy_of_conditional_statements.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Aaron0126/Aaron/blob/main/Copy_of_conditional_statements.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -161,7 +172,7 @@
         },
         "outputId": "a489ba6d-b3af-4071-b3a6-3bd6d5ccbf82"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,8 +204,10 @@
         "  print(\"$5\")\n",
         "elif s_a>=12 and s_a<=17:\n",
         "  print(\"$7\")\n",
-        "elif s_a>18:\n",
-        "  print(\"$10\")"
+        "elif s_a>=18 and s_a<=59:\n",
+        "  print(\"$10\")\n",
+        "elif s_a>60:\n",
+        "  print(\"$6\")"
       ],
       "metadata": {
         "id": "-i4B1AYyRPGp",
@@ -203,7 +216,7 @@
         },
         "outputId": "abae0ed6-34ea-4750-d811-78bb25d34311"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -273,7 +286,7 @@
         },
         "outputId": "ecbba381-7024-4994-fca1-552dd7d38f5b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,8 +321,7 @@
         "elif s_c>1 and s_c<=5:\n",
         "  print(\"Shipping cost: $10\")\n",
         "else:\n",
-        "  print(\"Shipping cost: $20\")\n",
-        ""
+        "  print(\"Shipping cost: $20\")\n"
       ],
       "metadata": {
         "id": "1roU2zvFRWbR"
@@ -344,7 +356,7 @@
         },
         "outputId": "af548445-ccff-4939-a05e-e0a2637d4aa5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
